--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -24,15 +24,19 @@ body {
 }
 
 /* Spacing between rows*/
-.top-buffer {
+.top-buffer-small {
+    margin-top: 15px;
+}
+
+.top-buffer-middle {
     margin-top: 50px;
 }
 
 /* FONTS */
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Baloo Tamma', cursive;
+h1, h2, h3, h4, h5, h6, p, div {
+    font-family: 'Roboto', sans-serif;
 }
 
-p, div {
-    font-family: 'Baloo Tamma', cursive;
+.green {
+    color: green;
 }
